--- a/questions/templates/base.html
+++ b/questions/templates/base.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load static %}
 
 <head>
     <meta charset="UTF-8">
     <title>AskSardaryan</title>
-            {% load static %}
-            <link rel="stylesheet" href={% static "css/styles.css" %}>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href={% static "css/styles.css" %}>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -69,7 +68,10 @@
         <div class="col-md-8 blog-main">
 
             <!-- questions -->
-            
+
+            {% block content %}
+            {% endblock %}
+
 
         </div><!-- /.blog-main -->
 
@@ -79,6 +81,11 @@
           <div class="p-3">
             <h4 class="font-italic">Popular Tags</h4>
             <ol class="list-unstyled mb-0">
+                <!--
+                {% for tag in best_tags %}
+                    <a href="#" style="margin-right:1em;">{{ tag }}</a>
+                {% endfor %}
+                -->
               <li><a href="#">Python</a></li>
               <li><a href="#">Django</a></li>
               <li><a href="#">Swift</a></li>
@@ -89,6 +96,12 @@
           <div class="p-3">
             <h4 class="font-italic">Best Members</h4>
             <ol class="list-unstyled">
+                <!--
+                {% for user in best_users %}
+                    <li><a href="#">{{ user }}</a></li>
+                {% endfor %}
+                -->
+
               <li><a href="#">Vladimir Putin</a></li>
               <li><a href="#">Donald Trump</a></li>
               <li><a href="#">Kim Jong Un</a></li>
