Command for generating fake data

--- a/questions/templates/base.html
+++ b/questions/templates/base.html
@@ -71,6 +71,8 @@
 
             {% block content %}
             {% endblock %}
+            {% block pagination %}
+            {% endblock %}
 
 
         </div><!-- /.blog-main -->
@@ -113,8 +115,8 @@
 
     </main><!-- /.container -->
 
-    <div class="footer">
-    </div>
+    <!--<div class="footer">-->
+    <!--</div>-->
 
 
 
