--- a/questions/templates/questions/settings.html
+++ b/questions/templates/questions/settings.html
@@ -1,5 +1,44 @@
-{% extends "base.html" %}
-
+{% extends 'base.html' %}
+{% load static %}
 {% block content %}
-<h3>Settings</h3>
+    <div class="row">
+       <h2>Settings: {{ username }}</h2>
+    </div>
+    <form action="#" class='input-question' enctype="multipart/form-data" method="post">
+        <div class="form-group row" style="display:none;">
+            <div class="col-2"></div>
+            <div class="col-6 justify-content-center">
+                <div class="invalid-feedback d-block" >Sorry, this email address allready registered! </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="Login" class="col-2 col-form-label is-invalid">Login</label>
+            <div class="col-6">
+                <input type="text" id='Login' class="form-control" maxlength="100"  >
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="Email" class="col-2 col-form-label">Email</label>
+            <div class="col-6">
+                <input type="email" id='Email' class="form-control" maxlength="100"  >
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="Nick" class="col-2 col-form-label">NickName</label>
+            <div class="col-6">
+                <input type="text" id='Nick' class="form-control " maxlength="100" >
+            </div>
+        </div>
+        <div class="form-group row" >
+            <label for="Image" class="col-2 col-form-label">Upload avatar</label>
+            <div class="col-6" id="Image">
+                <div class="row justify-content-center"><img class="avatar upload-img" src={% static 'img/user.png' %}></div>
+                <input type="file" class="form-control-file" id="exampleFormControlFile1">
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-2"></div>
+            <div class="col-6"><button type="submit" class="btn btn-success">Save</button></div>
+        </div>
+    </form>
 {% endblock %}
