question by pk, questions for tag, hot questions, questions pages, likes

--- a/questions/templates/questions/index.html
+++ b/questions/templates/questions/index.html
@@ -7,7 +7,7 @@
                 <h2>New Questions</h2>
            </div>
             <div class="col-8">
-                <a href="#">Hot Questions</a>
+                <a href={% url "hot" %}>Hot Questions</a>
             </div>
     </div>
     {% for question in questions %}
