--- a/questions/templates/base.html
+++ b/questions/templates/base.html
@@ -33,7 +33,7 @@
                                 <h4 class="text-white">Artur Sardaryan</h4>
                                 <ul class="list-unstyled">
                         <li><a href="#" class="text-white">Log Out</a></li>
-                        <li><a href="#" class="text-white">Settings</a></li>
+                        <li><a href={% url "settings" %}>Settings</a></li>
                                 </ul>
                             </td>
                         </tr>
@@ -45,7 +45,7 @@
     </div>
     <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container d-flex justify-content-between">
-            <a href="#" class="navbar-brand d-flex align-items-center">
+            <a href={% url "index" %} class="navbar-brand d-flex align-items-center">
                 <strong>AskSardaryan</strong>
             </a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
