--- a/questions/templates/questions/question_page.html
+++ b/questions/templates/questions/question_page.html
@@ -1,6 +1,8 @@
+{% extends "base.html" %}
 {% load static %}
 
-<div class="border my-3 rounded shadow-sm row">
+{% block content %}
+<div class="row">
     <div class="col-md-3">
         <div class="row justify-content-center">
             <img class="avatar rounded" src={% static "img/user.png" %}  >
@@ -15,9 +17,6 @@
             <p>{{ question.text }}</p>
         </div>
         <div class="row mb-0">
-            <div class="col-4">
-                <a href={% url "question" question.pk %}>comments({{ question.comments_count}})</a>
-            </div>
             <div class="col-8">
                 Tags:
                 {% for tag in question.tags.all %}
@@ -30,3 +29,22 @@
         </div>
     </div>
 </div>
+
+
+
+    <br>
+    {% for comment in question.comment_set.all %}
+        {% include "questions/comment.html" %}
+    {% endfor %}
+    <br>
+    <form action="#" class='input-question'>
+        <div class="form-group row">
+            <textarea  id='Text' class='form-control' cols="5" rows="5" placeholder="Enter your answer here.."></textarea>
+        </div>
+        <div class="form-group row">
+            <button type="submit" class="btn btn-primary">Ask!</button>
+        </div>
+    </form>
+
+
+{% endblock %}
